<resources>
    <string name="app_name" translatable="false">qBitConnect</string>

    <string name="language_code">en</string>

    <string name="share_add_torrent">Add Torrent</string>

    <string name="shortcut_new_window">New window</string>

    <string name="destination_torrents">Torrents</string>
    <string name="destination_search">Search</string>
    <string name="destination_rss">RSS</string>
    <string name="destination_logs">Logs</string>
    <string name="destination_settings">Settings</string>

    <string name="torrent_status_error">Error</string>
    <string name="torrent_status_missing_files">Missing Files</string>
    <string name="torrent_status_seeding">Seeding</string>
    <string name="torrent_status_paused">Paused</string>
    <string name="torrent_status_queued">Queued</string>
...
    <string name="action_select_inverse">Select Inverse</string>

    <string name="main_action_about">About</string>

    <string name="torrent_list_no_server_title">No Servers Available</string>
    <string name="torrent_list_no_server_description">You haven\'t added any servers yet. Add one to get started.</string>
    <string name="torrent_list_no_server_add">Add Server</string>
    <string name="torrent_list_empty_title">No Torrents Found</string>
    <string name="torrent_list_empty_description">You don\'t have any torrents. Add one to get started.</string>
    <string name="torrent_list_empty_rss">Add via RSS</string>
    <string name="torrent_list_empty_search">Search Torrents</string>
    <string name="torrent_list_empty_add">Add Torrent</string>
    <string name="torrent_list_no_result_title">No Results Found</string>
    <string name="torrent_list_no_result_description">No torrents match your current filters. Try adjusting your filters or search criteria.</string>
    <string name="torrent_list_no_result_reset">Reset Filters</string>

    <string name="torrent_list_action_add_torrent">Add Torrent</string>
...
    <string name="torrent_list_action_sort_total_leeches">Total Leeches</string>
    <string name="torrent_list_action_sort_addition_date">Addition Date</string>
    <string name="torrent_list_action_sort_completion_date">Completion Date</string>
    <string name="torrent_list_action_sort_last_activity">Last Activity</string>
    <string name="torrent_list_action_sort_reverse">Reverse</string>

    <string name="torrent_list_action_pause">Pause</string>
    <string name="torrent_list_action_resume">Resume</string>
    <string name="torrent_list_action_delete">Delete</string>
    <string name="torrent_list_action_priority">Priority</string>
    <string name="torrent_list_action_priority_increase">Increase Priority</string>
    <string name="torrent_list_action_priority_decrease">Decrease Priority</string>
    <string name="torrent_list_action_priority_maximize">Maximize Priority</string>
...
    <string name="torrent_list_status_all">All</string>
    <string name="torrent_list_status_downloading">Downloading</string>
    <string name="torrent_list_status_seeding">Seeding</string>
    <string name="torrent_list_status_completed">Completed</string>
    <string name="torrent_list_status_resumed">Resumed</string>
    <string name="torrent_list_status_paused">Paused</string>
    <string name="torrent_list_status_active">Active</string>
    <string name="torrent_list_status_inactive">Inactive</string>
    <string name="torrent_list_status_stalled">Stalled</string>
    <string name="torrent_list_status_checking">Checking</string>
    <string name="torrent_list_status_moving">Moving</string>
    <string name="torrent_list_status_error">Error</string>

...
    <string name="search_plugins_action_update_plugins">Update Plugins</string>

    <string name="execution_log_title">Execution Log</string>

    <string name="settings_title">Settings</string>

    <string name="settings_category_servers">Servers</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_network">Network</string>

    <string name="settings_disabled">Disabled</string>
    <string name="settings_connection_timeout">Connection timeout</string>
...
    <plurals name="settings_notification_check_interval_description">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <string name="settings_enable_torrent_swipe_actions">Enable torrent swipe actions</string>
    <string name="settings_check_updates">Automatically check for updates</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_system_default">System Default</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_system_default">System Default</string>
    <string name="settings_enable_dynamic_colors">Enable dynamic colors</string>
...
    <string name="settings_server_title_edit">Edit Server</string>
    <string name="settings_server_server_info">Server Information</string>
    <string name="settings_server_credentials">Credentials</string>
    <string name="settings_server_name">Name</string>
    <string name="settings_server_url">URL</string>
    <string name="settings_server_url_examples">Examples: %1$s</string>
    <string name="settings_server_username">Username</string>
    <string name="settings_server_password">Password</string>
    <string name="settings_server_trust_self_signed_certificates">Trust self-signed certificates</string>
    <string name="settings_server_test_configuration">Test Configuration</string>

    <string name="settings_server_action_delete">Delete</string>
    <string name="settings_server_action_save">Save</string>
    <string name="settings_server_action_advanced_settings">Advanced Settings</string>
...
